# FEUP-AED

funWithComplexity/: CMakeLists.txt  main.cpp
funWithComplexity/Tests/: funWithComplexity.cpp  funWithComplexity.h  tests.cpp
funWithComplexity/Tests/maxsubarray/: input01.txt  input02.txt  input03.txt  input04.txt  input05.txt
funWithCycles/: CMakeLists.txt  main.cpp
funWithCycles/Tests/: funWithCycles.cpp  funWithCycles.h  tests.cpp
funWithSearch/: CMakeLists.txt  main.cpp
funWithSearch/Tests/: Timer.cpp  Timer.h  funWithSearch.cpp  funWithSearch.h  test  tests.cpp
funWithSearch/Tests/closestSums/: input03.txt  input04.txt  input05.txt  input06.txt  input07.txt  input08.txt  output02.txt  output03.txt  output04.txt  output05.txt  output06.txt  output07.txt  output08.txt
funWithSearch/Tests/countRange/: input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  output01.txt  output02.txt  output03.txt  output04.txt  output05.txt
funWithSearch/Tests/lowerBound/: input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  output01.txt  output02.txt  output03.txt  output04.txt  output05.txt
funWithSearch/Tests/partitions/: input03.txt  input05.txt  output01.txt  output02.txt  output03.txt  output04.txt  output05.txt
funWithSearch/Tests/rules/: input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  input06.txt  input07.txt  input08.txt  input09.txt  output01.txt  output02.txt  output03.txt  output04.txt  output05.txt  output06.txt  output07.txt  output08.txt  output09.txt  output10.txt  output11.txt  output12.txt  output13.txt  (+3 more)
(+16 files in other folders)
